# LittleCode

./: 08.txt  CMakeLists.txt  README.md  blocks.cpp  blocks.h  calculate.cpp  calculate.h  filerecord.cpp  filerecord.h  global.h  gms_matcher.cpp  gms_matcher.h  iointerface.cpp  iointerface.h  main.cpp  mdata.cpp  mdata.h  mio.cpp  mio.h  mref.cpp  mref.h  readTXT.cpp  ref.txt  traj.cpp  traj.h
